# ove-jupyter-example

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: hex-config.json
